--- a/Media Pipe Pose Tutorial.ipynb
+++ b/Media Pipe Pose Tutorial.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 0. Install and Import Dependencies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# 0. Install and Import Dependencies\n",
     "!pip install mediapipe opencv-python"
    ]
   },
@@ -441,9 +433,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mediapipe",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mediapipe"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -455,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
